Updated swagger and plan_trip endpoint
